--- a/User-Service-API/.env.development
+++ b/User-Service-API/.env.development
@@ -5,9 +5,8 @@ APP_VERSION=1.0.0
 LOG=true
 DRIVE_DISK=local
 
-PG_HOST=kiouni.db.elephantsql.com
-PG_USER=oiqrgfzx
-PG_PASSWORD=uaZpsCDtCHXhcZ_XJySTGLck4ZwzaiaY
-PG_DB_NAME=Final_Project_DB
-
+PG_HOST=satao.db.elephantsql.com
+PG_USER=bbwpqlwg
+PG_PASSWORD=RG1arv9MjQx88dzjjEZ0OLtQ5h3MCReH
+PG_DB_NAME=bbwpqlwg
 
