--- a/Pos-Middle-Ware-Service/.env.development
+++ b/Pos-Middle-Ware-Service/.env.development
@@ -5,10 +5,10 @@ APP_VERSION=1.0.0
 LOG=true
 DRIVE_DISK=local
 
-PG_HOST=kiouni.db.elephantsql.com
-PG_USER=oiqrgfzx
-PG_PASSWORD=uaZpsCDtCHXhcZ_XJySTGLck4ZwzaiaY
-PG_DB_NAME=oiqrgfzxs
+PG_HOST=satao.db.elephantsql.com
+PG_USER=bbwpqlwg
+PG_PASSWORD=RG1arv9MjQx88dzjjEZ0OLtQ5h3MCReH
+PG_DB_NAME=bbwpqlwg
 
 ORDER_SERVICE_URL=http://42.112.26.77:3007
 CUSTOMER_SERVICE_URL=http://42.112.26.77:3005
