--- a/Products-Service-API/.env.development
+++ b/Products-Service-API/.env.development
@@ -1,8 +1,7 @@
-APP_NAME=POS-Products-Service
-PORT=3000
-NODE_ENV=dev
+APP_NAME=Final-project-api
+PORT=3001
+NODE_ENV=Development
 APP_VERSION=1.0.0
-LOG=true
 DRIVE_DISK=local
 
 PG_HOST=satao.db.elephantsql.com
