--- a/User-Service-API/.env.development
+++ b/User-Service-API/.env.development
@@ -1,12 +1,12 @@
-APP_NAME=POS-User-Indentify-Service
-PORT=3000
-NODE_ENV=dev
+APP_NAME=User-Indentify-Service
+PORT=3005
+NODE_ENV=Development
 APP_VERSION=1.0.0
-LOG=true
 DRIVE_DISK=local
 
 PG_HOST=satao.db.elephantsql.com
 PG_USER=bbwpqlwg
 PG_PASSWORD=RG1arv9MjQx88dzjjEZ0OLtQ5h3MCReH
 PG_DB_NAME=bbwpqlwg
+
 
