--- a/Pos-Middle-Ware-Service/package.json
+++ b/Pos-Middle-Ware-Service/package.json
@@ -46,6 +46,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "elastic-apm-node": "^3.37.0",
     "express-rate-limit": "^7.2.0",
     "helmet": "^5.1.1",
